Actualizar URL indicador BI

--- a/SIGOFCv3/Areas/General/Views/Reportes/IndicadoresOSINFOR_1.cshtml
+++ b/SIGOFCv3/Areas/General/Views/Reportes/IndicadoresOSINFOR_1.cshtml
@@ -7,7 +7,7 @@
 <div class="container-fluid">
     <div class="card">
         <div class="card-body">
-            <iframe title="BI-OSINFOR-INICIO" width="1500" height="800" src="https://app.powerbi.com/view?r=eyJrIjoiMmMwYzE1ZGYtZDlmMC00ZmMzLWI2N2MtYjQzYjU0MjI1MDBiIiwidCI6IjQ3NDliYjcxLWE5YTQtNDAyMi1iMGVjLTE5ZWU5ZTkwYWQ0NyJ9" frameborder="0" allowFullScreen="true"></iframe>            
+            <iframe title="BI-OSINFOR-INICIO" width="1500" height="800" src="https://app.powerbi.com/view?r=eyJrIjoiYTkxOGY3ZGItOGRlZi00N2VlLWE1Y2UtYTI3NjRmMDRmMWM3IiwidCI6IjQ3NDliYjcxLWE5YTQtNDAyMi1iMGVjLTE5ZWU5ZTkwYWQ0NyJ9&pageName=ReportSectionc19e6e9d1a4ead789139" frameborder="0" allowFullScreen="true"></iframe>            
         </div>
     </div>
 </div>
