Avance de plantillas para IFI Simplificado

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/Shared/_InformeIFI.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/Shared/_InformeIFI.cshtml
@@ -540,7 +540,7 @@
                 </div>
             </div>
             <div class="mb-3">
-                <h5>Comunicación al GORE</h5>
+                <h5>Comunicación al GORE y/o otras autoridades</h5>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="rb_comunicacion_gore" id="rb_comunicacion_gore_si" v-bind:value="true" v-model="Informe.FLG_COMUNICACION_GORE">
                     <label class="form-check-label" for="rb_comunicacion_gore_si">Si</label>
