--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Comunidades nativas/infracciones/inciso_2.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Comunidades nativas/infracciones/inciso_2.cshtml
@@ -11,7 +11,7 @@
     <tbody>
         <tr>
             <td style="border: 1px solid #000;">
-                Dependerá del caso concreto
+                Literal b) del numeral 29.1 del artículo 29, concordado con el artículo 35 del RGFFSCNCC
             </td>
             <td style="border: 1px solid #000;">
                 <div>Numeral 2 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS</div><br />
@@ -141,7 +141,7 @@
 {{/if}}
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
-        Conforme el artículo 66 del RGF los informes de ejecución se clasifican en: <strong>a)</strong> informe de ejecución anual (se presentan al final de año operativo en base al plan de manejo aprobado); y <strong>b)</strong> informe de ejecución final (se presenta al finalizar la vigencia del plan de manejo). <strong>El plazo para presentar el informe de ejecución a la ARFFS y al OSINFOR, es dentro de los 45 días culminado el año operativo</strong>, es decir, la Titular debió presentar el informe de ejecución conforme al siguiente cuadro:
+        Conforme el artículo 35 del RGFFSCNCC los informes de ejecución se clasifican en: <strong>a)</strong> informe de ejecución anual (se presentan al final de año operativo en base al plan de manejo aprobado); y <strong>b)</strong> informe de ejecución final (se presenta al finalizar la vigencia del plan de manejo). <strong>El plazo para presentar el informe de ejecución a la ARFFS y al OSINFOR, es dentro de los 45 días culminado el año operativo</strong>, es decir, la Titular debió presentar el informe de ejecución conforme al siguiente cuadro:
     </li>
     <li>
         La Titular <strong><u>no ha cumplido con presentar el Informe de Ejecución del XX, correspondiente al primer periodo anual 20XX-20XX, el cual debe contener las actividades de aprovechamiento de productos forestales maderables y no maderables</u></strong>, incluso habiéndose realizado la consulta en el Sistema de Trámite Documentario- SITD del OSINFOR, a la fecha de emisión del presente informe no han sido presentados, dicho incumplimiento se detalla en el siguiente cuadro.
@@ -165,28 +165,11 @@
     <tbody>
         <tr>
             <td style="border: 1px solid #000;" rowspan="2">
-                Dependerá del caso concreto
+                XX
             </td>
             <td style="border: 1px solid #000;" rowspan="2">
                 Dependerá del caso concreto
             </td>
-            <td style="border: 1px solid #000;">
-                No maderable (castaña)
-            </td>
-            <td style="border: 1px solid #000;">
-                XX
-            </td>
-            <td style="border: 1px solid #000;">
-                XX
-            </td>
-            <td style="border: 1px solid #000;">
-                XX
-            </td>
-            <td style="border: 1px solid #000;">
-                No cumplió
-            </td>
-        </tr>
-        <tr>
             <td style="border: 1px solid #000;">
                 Maderable
             </td>
@@ -202,7 +185,7 @@
             <td style="border: 1px solid #000;">
                 No cumplió
             </td>
-        </tr>
+        </tr>        
     </tbody>
 </table>
 <div>Fuente: Elaboración propia</div>
