--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_2.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_2.cshtml
@@ -11,7 +11,7 @@
     <tbody>
         <tr>
             <td style="border: 1px solid #000;">
-                Dependerá del caso concreto
+                Literal b) del numeral 43.1 del artículo 43, concordado con el artículo 66 del RGF.
             </td>
             <td style="border: 1px solid #000;">
                 <div>Numeral 2 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS</div><br />
@@ -172,22 +172,6 @@
             </td>
             <td style="border: 1px solid #000;">
                 No maderable (castaña)
-            </td>
-            <td style="border: 1px solid #000;">
-                XX
-            </td>
-            <td style="border: 1px solid #000;">
-                XX
-            </td>
-            <td style="border: 1px solid #000;">
-                XX
-            </td>
-            <td style="border: 1px solid #000;">
-                No cumplió
-            </td>
-        </tr>
-        <tr>
-            <td style="border: 1px solid #000;">
                 Maderable
             </td>
             <td style="border: 1px solid #000;">
@@ -200,7 +184,7 @@
                 XX
             </td>
             <td style="border: 1px solid #000;">
-                No cumplió
+                Si/No cumplió
             </td>
         </tr>
     </tbody>
