--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_11.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_11.cshtml
@@ -1,4 +1,4 @@
-﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+﻿<table cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">Base legal de la obligación</th>
@@ -39,7 +39,7 @@
     {{if informe.COD_TIPO_INFORME == 1}}
     <li>
         <span>
-            Por Escrito/Carta de fecha XX de XX de 20XX ingresado al OSINFOR con Registro N° XXXXXXXXX, e/la concesionario/a presentó sus descargos, donde se advierte los siguientes argumentos que guarda relación con la imputación materia de análisis:
+            Por Escrito/Carta de fecha ${informe.ANTECEDENTES_DOCS.Escrito.fechaEmisionTexto ||'XX de XXXX'} ingresado al OSINFOR con Registro N° ${informe.ANTECEDENTES_DOCS.Escrito.numero || '00XX-202X-OSINFOR/08.2.X'}, e/la concesionario/a presentó sus descargos, donde se advierte los siguientes argumentos que guarda relación con la imputación materia de análisis:
             <br />
             <ol style="list-style-type: lower-alpha;">
                 <li>(Agregar texto original).</li>
@@ -140,3 +140,21 @@
     </li>
 </ol>
 {{/if}}
+
+<ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
+    <li>
+        Mediante el <strong>Oficio N° xx-GOREMAD-GRFFS</strong> (Registro N° xx) de fecha XX, la ARFFS señaló que el código de Libro de Operaciones otorgado al título habilitante de el/la titular es: ${informe.TITULAR || 'XX'}, tal como se observa a continuación:
+    </li>
+</ol>
+<p style="text-align: center;">Imagen....</p>
+<ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
+    <li>
+        Al respecto, si bien se ha verificado que el/la titular cuenta con código del Libro de Operaciones otorgado por la ARFFS, <strong>durante la supervisión, se evidenció que la titular no contaba con el libro de manera física</strong>, tal como se establece en la Resolución de Dirección Ejecutiva N° 264-2019-MINAGRI-SERFOR-DE, del 30 de diciembre de 2019, mediante la cual se aprobó el formato actualizado del “Libro de Operaciones de los Títulos Habilitantes para aprovechamiento forestal maderable”.
+    </li>
+    <li>
+        Adicionalmente, de la búsqueda realizada en el Sistema de Trámite Documentario - SITD del OSINFOR, <strong>se advierte que, el/la titular no ha presentado el Libro de Operaciones actualizado</strong>, hasta la fecha de emisión del presente Informe.
+    </li>
+    <li>
+        En ese sentido, <strong>se concluye que el Libro de operaciones no se encuentra actualizado</strong>, y siendo <strong>que el/la titular ${informe.TITULAR || 'XX'}</strong>
+    </li>
+</ol>
