--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_11.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_11.cshtml
@@ -1,4 +1,4 @@
-﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+﻿<table cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">Base legal de la obligación</th>
@@ -11,15 +11,15 @@
     <tbody>
         <tr>
             <td style="border: 1px solid #000;">
-                Dependerá del caso concreto
+                El literal d) numeral 43.1 artículo 43 del RGF.
             </td>
             <td style="border: 1px solid #000;">
-                Numeral 11 del Anexo 1 del RISMFFS.
+                Numeral 11 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS
                 <br /><br />
-                <i>“No tener libro de operaciones o no registrar la información en dicho libro, de acuerdo a las disposiciones establecidas”.</i>
+                <i>"No tener libro de operaciones o no registrar la información en dicho libro, de acuerdo a las disposiciones establecidas".</i>
             </td>
             <td style="border: 1px solid #000;">
-                Tener y mantener actualizado el libro de operaciones de acuerdo a los lineamientos aprobados por el SERFOR.
+                Dependerá del caso concreto
             </td>
             <td style="border: 1px solid #000;">
                 Dependerá del caso concreto
@@ -32,55 +32,95 @@
 </table>
 <div>Fuente: Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || '00XX-202X-OSINFOR/08.2.X'}</div>
 
+{{if infraccion.flgSubsana}}
+<h5><strong>Sobre la subsanación voluntaria</strong></h5>
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
-    {{if informe.COD_TIPO_INFORME == 1}}
     <li>
         <span>
-            Mediante Escrito S/N de fecha XX de XX de 20XX con Registro XX, la administrada presentó sus descargos, donde se advierte los siguientes argumentos que guarda relación con la imputación materia de análisis:<br /><br />
-            <ol style="list-style-type: lower-alpha">
-                <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
-                <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
-                <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
-            </ol>
+            En tal sentido, teniendo en consideración que las condiciones y forma en cómo se procederá a realizar la subsanación voluntaria ya se encuentra establecida en el RISMFFS, resulta pertinente aplicar los criterios señalados en dicho Reglamento teniéndose en cuenta los siguientes requisitos:
+            <br />
+            <div style="text-align: center; margin-bottom: 0;">
+                <strong>
+                    Cuadro N° XX: Evaluación de los presupuestos para la configuración de la subsanación voluntaria
+                </strong>
+            </div>
+            <table width="560" cellpadding="4" border="0" style="font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%; margin-bottom: 0;">
+                <thead>
+                    <tr style="background-color: #bfbfbf;">
+                        <th style="text-align: center; border: 1px solid #000;" colspan="2">Condiciones para la configuración de la subsanación voluntaria</th>
+                        <th style="text-align: center; border: 1px solid #000;">Evaluación</th>
+                        <th style="text-align: center; border: 1px solid #000;">Cumple con el requisito (SI/NO)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td style="border: 1px solid #000; background-color: #bfbfbf; text-align: center;" rowspan="2">
+                            Presupuestos básicos
+                        </td>
+                        <td style="border: 1px solid #000;">
+                            (i) Realizar la presentación dentro del plazo previsto para la presentación de los descargos en la fase instructora.
+                        </td>
+                        <td style="border: 1px solid #000;">
+                            En el presente caso, se advierte que el/la concesionario/a presentó ante el (indicar entidad e informe de ejecución objeto de imputación, así como el periodo correspondiente y fecha de presentación); es decir, dentro del plazo previsto para la presentación de los descargos (esto es hasta el XX de XXXX de XXXX).
+                        </td>
+                        <td style="border: 1px solid #000; text-align: center;">SI</td>
+                    </tr>
+                    <tr>
+                        <td style="border: 1px solid #000;">
+                            (ii) No ser sujeto infractor reincidente.
+                        </td>
+                        <td style="border: 1px solid #000;">
+                            Según el Reporte de Antecedentes, de fecha XX de XXXX de XXXX, se aprecia que el/la concesionario/a no registra sanción y/o multa impuesta por la Dirección de Fiscalización Forestal y de Fauna Silvestre, por lo que, se tiene por cumplido el requisito analizado.
+                        </td>
+                        <td style="border: 1px solid #000; text-align: center;">SI</td>
+                    </tr>
+                    <tr>
+                        <td style="border: 1px solid #000; background-color: #bfbfbf; text-align: center;">
+                            Presupuestos específico
+                        </td>
+                        <td style="border: 1px solid #000;">
+                            (i) Actualizar el Libro de Operaciones.
+                        </td>
+                        <td style="border: 1px solid #000;">
+                            De la revisión del Libro de Operaciones remitido por Escrito/Carta de fecha XX de XX de 20XX ingresado al OSINFOR con Registro N° XXXXXXXXX, se advierte que el/la concesionario/a presentó el Libro de Operaciones, el cual producto de la evaluación técnica se encuentra actualizado, por lo que, se tiene por cumplido el requisito analizado.
+                        </td>
+                        <td style="border: 1px solid #000; text-align: center;">SI</td>
+                    </tr>
+                </tbody>
+            </table>
+            <div style="font-size: 9pt; margin-top: 0; text-align: center;">
+                <strong>Fuente:</strong> Elaboración propia en base a lo regulado por el artículo 6 del RISMFFS
+            </div>
         </span>
     </li>
+</ol>
+<ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
-        <span>
-            Respecto a lo señalado por la administrada, se advierte el siguiente análisis:<br /><br />
-            <ul>
-                <li>Con relación al argumento señalado en el acápite a) xxxxxxxxxxxxxxxxxxx</li>
-                <li>Con relación al argumento señalado en el acápite b) xxxxxxxxxxxxxxxxxxx</li>
-                <li>Con relación al argumento señalado en el acápite c) xxxxxxxxxxxxxxxxxxx</li>
-            </ul>
-        </span>
-    </li>
-    {{/if}}
-    <li>
-        <span>
-            En el presente caso, de acuerdo a la documentación que obra en el expediente administrativo
-            {{if informe.COD_TIPO_INFORME == 1}}
-            y del análisis de los descargos,
-            {{/if}}
-            ha quedado acreditado lo siguiente:
-            <br /><br />
-            <ul>
-                <li>
-                    El Libro de operaciones es exigible a partir de 02 de marzo de 2020, conforme a lo establecido en la Resolución de Dirección Ejecutiva Nº 264-2019-MINAGRI-SERFOR-DE.
-                </li>
-                <li>
-                    El administrado realizo movilización de madera rolliza entre las fechas XX, las cuales son posteriores a la fecha 02 de marzo de acuerdo a lo reportado en el Libro Forma 20.
-                </li>
-                <li>
-                    El administrado no cumplió con presentar el Libro de Operaciones, a pesar de haber sido solicitado mediante la Carta Nº XX-20XX-OSINFOR/08.1 y la Carta Nº XX-20XX-OSINFOR/08.1, así como en la diligencia de supervisión según consta en el acta de coordinación previa a la supervisión. Asimismo, dicho incumplimiento por la ARFFS mediante el Oficio Nº XX (oficio de autoridad).
-                </li>
-            </ul>
-        </span>
+        En atención a lo señalado precedentemente, se advierte que la conducta <strong>del/la concesionario/a</strong> <u>cumple con los requisitos para la aplicación de la figura de subsanación voluntaria respecto de la infracción materia de análisis</u>.
     </li>
     <li>
-        En ese contexto, de acuerdo a lo señalado precedentemente
-        {{if informe.COD_TIPO_INFORME == 1}}
-        y siendo que los descargos
-        {{/if}}
-        presentados por la administrada no desacreditan los hechos que sustentan la imputación, se confirma que la administrada cometió la infracción tipificada en el literal XXXXXXXX.
+        En ese sentido, de acuerdo a lo señalado precedentemente, y considerando la configuración de la subsanación voluntaria, se <strong>desestima</strong> que la concesionaria haya cometido la infracción tipificada en el numeral 11 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
+    </li>
+    <li>
+        Sin perjuicio de lo señalado anteriormente, se <strong>exhorta al/la concesionario/a</strong> a cumplir con su obligación como titular del contrato de concesión de remitir tener y mantener actualizado el Libro de Operaciones de acuerdo a los lineamientos aprobados por el SERFOR, a fin de evitar incurrir en futuras infracciones administrativas.
+    </li>
+</ol>
+{{/if}}
+
+<ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
+    <li>
+        Mediante el <strong>Oficio N° xx-GOREMAD-GRFFS</strong> (Registro N° xx) de fecha XX, la ARFFS señaló que el código de Libro de Operaciones otorgado al título habilitante de el/la titular es: ${informe.TITULAR || 'XX'}, tal como se observa a continuación:
+    </li>
+</ol>
+<p style="text-align: center;">Imagen....</p>
+<ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
+    <li>
+        Al respecto, si bien se ha verificado que el/la titular cuenta con código del Libro de Operaciones otorgado por la ARFFS, <strong>durante la supervisión, se evidenció que la titular no contaba con el libro de manera física</strong>, tal como se establece en la Resolución de Dirección Ejecutiva N° 264-2019-MINAGRI-SERFOR-DE, del 30 de diciembre de 2019, mediante la cual se aprobó el formato actualizado del “Libro de Operaciones de los Títulos Habilitantes para aprovechamiento forestal maderable”.
+    </li>
+    <li>
+        Adicionalmente, de la búsqueda realizada en el Sistema de Trámite Documentario - SITD del OSINFOR, <strong>se advierte que, el/la titular no ha presentado el Libro de Operaciones actualizado</strong>, hasta la fecha de emisión del presente Informe.
+    </li>
+    <li>
+        En ese sentido, <strong>se concluye que el Libro de operaciones no se encuentra actualizado</strong>, y siendo <strong>que el/la titular ${informe.TITULAR || 'XX'}</strong>
     </li>
 </ol>
